samples/_failures_safe/1761505451_112eb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_369201fc.c: In function ‘process_token’:
./samples/SAFE/__tmp_369201fc.c:154:21: error: expected ‘;’ at end of input
  154 |     ctx->float_value
      |                     ^
      |                     ;
./samples/SAFE/__tmp_369201fc.c:154:5: error: expected declaration or statement at end of input
  154 |     ctx->float_value
      |     ^~~
